# dropbox-cp

./: Cargo.toml  README.md  mise.toml
.github/workflows/: test.yml
src/: auth.rs  main.rs  upload.rs
