[package]
name = "dropbox-cp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
walkdir = "2.5"

[dependencies.dropbox-sdk]
version = "0.19"
default-features = false
features = ["default_client", "sync_routes", "dbx_files"]
